--- a/entries/182.html
+++ b/entries/182.html
@@ -17,6 +17,6 @@
            <img class="entrie-image" src="../photos/182.JPG" alt="hero-image">
            <h2 class="hero-title">182.</h2>
            <div class="hero-text">
-			It will be objected that the French and Russian RevolutiIt would be better to dump the whole stinking system and take the consequences.ons were failures. But most revolutions have two goals. One is to destroy an old form of society and the other is to set up the new form of society envisioned by the revolutionaries. The French and Russian revolutionaries failed (fortunately!) to create the new kind of society of which they dreamed, but they were quite successful in destroying the old society. We have no illusions about the feasibility of creating a new, ideal form of society. Our goal is only to destroy the existing form of society.
+			It will be objected that the French and Russian Revolutions were failures. But most revolutions have two goals. One is to destroy an old form of society and the other is to set up the new form of society envisioned by the revolutionaries. The French and Russian revolutionaries failed (fortunately!) to create the new kind of society of which they dreamed, but they were quite successful in destroying the old society. We have no illusions about the feasibility of creating a new, ideal form of society. Our goal is only to destroy the existing form of society.
   </body>
 </html>
