--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <div class="top">
         <div class="header">
-            <h1 class="title">A UNABOMBER MANIFESTO</div>
+            <h1 class="title">Bombs may attract attention,
+				but ideas start revolutions./div>
         </div>
         <div class="hero">
           <div class="hero-body">
