--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <body>
     <div class="top">
         <div class="header">
-            <h1 class="title">Bombs may attract attention,
-				but ideas start revolutions./div>
+			<h1 class="title"><span style="font-size: 100px;">Bombs may attract attention,<br>but ideas start revolutions.</span></h1>
         </div>
         <div class="hero">
           <div class="hero-body">
-            <img class="hero-image" src="./kaczynski.jpg" alt="hero-image">
+            <!-- <img class="hero-image" src="./kaczynski.jpg" alt="hero-image"> -->
             <h2 class="hero-title">1.</h2>
             <div class="hero-text">
                 The Industrial Revolution and its consequences have been a disaster for the human race. They have greatly increased the life-expectancy of those of us who live in “advanced” countries, but they have destabilized society, have made life unfulfilling, have subjected human beings to indignities, have led to widespread psychological suffering (in the Third World to physical suffering as well) and have inflicted severe damage on the natural world. The continued development of technology will worsen the situation. It will certainly subject human beings to greater indignities and inflict greater damage on the natural world, it will probably lead to greater social disruption and psychological suffering, and it may lead to increased physical suffering even in “advanced” countries.
@@ -32,7 +31,7 @@
                 <li class="numbers">33</li>
                 <li><a href="./entries/33.html">THE POWER PROCESS</a></li>
                 <li class="numbers">40</li>
-                <li><a href="./entries/48.html">SURROGATE ACTIVITIES</a></li>
+                <li><a href="./entries/40.html">SURROGATE ACTIVITIES</a></li>
                 <li class="numbers">42</li>
                 <li><a href="./entries/42.html">AUTONOMY</a></li>
                 <li class="numbers">57</li>
@@ -75,6 +74,9 @@
                 <li><a href="./entries/214.html">THE DANGER OF LEFTISM</a></li>
 				<li class="numbers">231</li>
                 <li><a href="./entries/231.html">FINAL NOTE</a></li>
+				<div class="bottom-container">
+					<a href="./pdf/pdf-link.html">Useful documents</a>
+				  </div>
             </ul>
           </div>
         </div>
