--- a/entries/40.html
+++ b/entries/40.html
@@ -10,7 +10,7 @@
  <body>
    <div class="top">
        <div class="header">
-           <h1 class="title">INTRODUCTION</div>
+           <h1 class="title">SURROGATE ACTIVITIES</div>
        </div>
        <div class="hero">
          <div class="hero-body">
