--- a/entries/89.html
+++ b/entries/89.html
@@ -10,6 +10,7 @@
  <body>
    <div class="top">
        <div class="header">
+		<a href="#" class="back-link" onclick="history.back()">Back</a>
            <h1 class="title">THE MOTIVES OF SCIENTISTS</div>
        </div>
        <div class="hero">
