--- a/entries/10.html
+++ b/entries/10.html
@@ -10,6 +10,7 @@
  <body>
    <div class="top">
        <div class="header">
+		<a href="#" class="back-link" onclick="history.back()">Back</a> 
            <h1 class="title">FEELINGS OF INFERIORITY</div>
        </div>
        <div class="hero">
