--- a/entries/111.html
+++ b/entries/111.html
@@ -10,7 +10,8 @@
  <body>
    <div class="top">
        <div class="header">
-           <h1 class="title">INDUSTRIAL-TECHNOLOGICAL SOCIETY CANNOT BE REFORMED</div>
+		<a href="#" class="back-link" onclick="history.back()">Back</a>
+        <h1 class="title">INDUSTRIAL-TECHNOLOGICAL SOCIETY CANNOT BE REFORMED</div>
        </div>
        <div class="hero">
          <div class="hero-body">
