--- a/entries/141.html
+++ b/entries/141.html
@@ -10,7 +10,8 @@
  <body>
    <div class="top">
        <div class="header">
-           <h1 class="title">REVOLUTION IS EASIER THAN REFORM</div>
+		<a href="#" class="back-link" onclick="history.back()"></a>
+		<h1 class="title">REVOLUTION IS EASIER THAN REFORM</div>
        </div>
        <div class="hero">
          <div class="hero-body">
