--- a/entries/212.html
+++ b/entries/212.html
@@ -10,7 +10,8 @@
  <body>
    <div class="top">
        <div class="header">
-           <h1 class="title">TWO KINDS OF TECHNOLOGY</div>
+		<a href="#" class="back-link" onclick="history.back()"></a>
+        <h1 class="title">TWO KINDS OF TECHNOLOGY</div>
        </div>
        <div class="hero">
          <div class="hero-body">
