--- a/entries/214.html
+++ b/entries/214.html
@@ -10,7 +10,8 @@
  <body>
    <div class="top">
        <div class="header">
-           <h1 class="title">THE DANGER OF LEFTISM</div>
+		<a href="#" class="back-link" onclick="history.back()"></a>
+		<h1 class="title">THE DANGER OF LEFTISM</div>
        </div>
        <div class="hero">
          <div class="hero-body">
