--- a/entries/57.html
+++ b/entries/57.html
@@ -10,7 +10,8 @@
  <body>
    <div class="top">
        <div class="header">
-           <h1 class="title">SOURCES OF SOCIAL PROBLEMS</div>
+		<a href="#" class="back-link" onclick="history.back()">Back</a>
+		<h1 class="title">SOURCES OF SOCIAL PROBLEMS</div>
        </div>
        <div class="hero">
          <div class="hero-body">
