--- a/entries/166.html
+++ b/entries/166.html
@@ -10,7 +10,7 @@
  <body>
    <div class="top">
        <div class="header">
-		<a href="#" class="back-link" onclick="history.back()"></a>
+		<a href="#" class="back-link" onclick="history.back()">Back</a>
 		<h1 class="title">HUMAN RACE AT A CROSSROADS</div>
        </div>
        <div class="hero">
