--- a/entries/212.html
+++ b/entries/212.html
@@ -10,7 +10,7 @@
  <body>
    <div class="top">
        <div class="header">
-		<a href="#" class="back-link" onclick="history.back()"></a>
+		<a href="#" class="back-link" onclick="history.back()">Back</a>
         <h1 class="title">TWO KINDS OF TECHNOLOGY</div>
        </div>
        <div class="hero">
