--- a/pdf/pdf-link.html
+++ b/pdf/pdf-link.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-
+	<a href="#" class="back-link" onclick="history.back()">Back</a>
   <div class="page-container">
     <img src="page-01.png" alt="Page 1" class="page">
     <img src="page-02.png" alt="Page 2" class="page">
