--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<li class="numbers">231</li>
                 <li><a href="./entries/231.html">FINAL NOTE</a></li>
 				<div class="bottom-container">
-					<a href="./pdf/pdf-link.html">Useful documents</a>
+					<a href="./documents/document-list.html">Useful documents</a>
 				  </div>
             </ul>
           </div>
