increasing size of back in pdf

--- a/documents/pdf/pdf-link.html
+++ b/documents/pdf/pdf-link.html
@@ -3,7 +3,7 @@
 <head>
   <title>Cookbook</title>
   <style>
-	
+
 .page-container {
   display: flex;         /* Use Flexbox */
   flex-wrap: wrap;      /* Allow wrapping to next line */
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-	<a href="#" class="back-link" onclick="history.back()">Back</a>
+	<a href="#" class="back-link" onclick="history.back()" style="font-size: 40px">Back</a>
   <div class="page-container">
     <img src="page-01.png" alt="Page 1" class="page">
     <img src="page-02.png" alt="Page 2" class="page">
